<resources>
    <string name="app_name">FireApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name:</string>
    <string name="or">Or</string>
    <string name="singup">SingUp</string>
    <string name="userprofile">User Profile</string>
    <string name="address">Address:</string>
    <string name="contact">Mobile:</string>
    <string name="birthday">Birthday:</string>
    <string name="photo">Photo</string>
    <string name="gender">Gender:</string>
    <string name="edit">Edit</string>

</resources>